# Case-Study-2

./: .gitignore  README  README.md  backend_deploy.sh  backend_docker_deploy.sh  frontend_deploy.sh  frontend_docker_deploy.sh  grafana_docker_deploy.sh  ngrok-backend.yml  ngrok-grafana.yml  ngrok.yml  prometheus.yml  pyproject.toml  pytest.ini  start_backend_dev.sh  start_frontend_dev.sh
.github/workflows/: build-frontend.yml  lint.yml
backend/: Dockerfile  local_model.py  remote_model.py  routes.py
backend/datamodels/: datamodels.py
backend/db/: database.py
backend/tests/: test_consts.py  test_database.py  test_datamodels.py  test_local_model.py  test_routes.py
backend/utils/: consts.py
deprecated/: frontend_deploy.sh
grafana/provisioning/datasources/: datasource.yml
services/: add-cron-backend.sh  add-cron-frontend.sh  add-cron.sh  backend.service  frontend.service  watchdog-backend.sh  watchdog-frontend.sh  watchdog.sh
shrug-intelligence/: Dockerfile  package.json
shrug-intelligence/.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
shrug-intelligence/.next/cache/: .previewinfo  .rscinfo  config.json
shrug-intelligence/.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
shrug-intelligence/.next/server/app/: _global-error.html  _global-error.rsc  _not-found.html  (+6 more)
shrug-intelligence/app/: globals.css  layout.tsx  page.tsx
(+104 files in other folders)
